<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearnEnglishActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="#F80606"
        android:text="@string/learnLanguage"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:layout_below="@id/toolbar"/>

    <RadioGroup
        android:id="@+id/radioGroupLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/textView"
        >

        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/radioPolish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/polish"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroupLang"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="#F80606"
        android:text="@string/mode"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <RadioGroup
        android:id="@+id/modeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="5dp">

        <RadioButton
            android:id="@+id/radioLearn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn" />

        <RadioButton
            android:id="@+id/radioTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/test" />
    </RadioGroup>

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="40dp"
        />

</RelativeLayout>